--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "firebase-auth",
+  "name": "mytwocents",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "firebase": "^5.0.4",
     "node-sass-chokidar": "^1.3.0",
